# zpilot

./: .gitmodules  CMakeLists.txt  README.md  prj.conf  spi1.patch
boards/arm/cc3d/: Kconfig.board  Kconfig.defconfig  cc3d.dts
boards/arm/kite/: Kconfig  Kconfig.board  Kconfig.defconfig  kite.dts  kite.yaml  kite_defconfig
boards/arm/moon/: Kconfig.board  Kconfig.defconfig  moon.dts  moon.yaml
boards/arm/naze32/: Kconfig.board  Kconfig.defconfig  naze32.yaml
drivers/sensor/l3g4200d/zephyr/: CMakeLists.txt  Kconfig  l3g4200d.c  l3g4200d.h  l3g4200d_spi.c
drivers/sensor/lsm303dlh/zephyr/: CMakelists.txt  Kconfig  lsm303dlh_accel.c  lsm303dlh_accel.h
dts/bindings/sensor/: st,l3g4200d.yaml
src/: main.c  pwm.c  sensor.c
src/libs/event_period/: event_period.c  event_period.h
src/telemetry/: mavproxy.c  telemetry.c
